fixed Name alignment

--- a/index.css
+++ b/index.css
@@ -35,7 +35,7 @@ body{
     height: 350px;
     grid-gap: 0em;
     margin-top: 6em;
-    margin-left: 10em;
+    margin-left: 5em;
     height: 250px;
 }
 .intro-img{
